#84 THOROUGH refactoring, HEAVY cleanup of chess logic from all perspectives and layers. Bug fixing, code cleanup, readability, console.log removal (very satisfying)

--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -99,6 +99,10 @@ main {
     margin-left: 1%;
 }
 
+#chessboard {
+    display: inline-block;
+}
+
 .chessRow {
     font-size: 0; /* HTML has this weird spacing issue causing empty spaces, removing any font size fixes it */
 }
